syntax = "proto3";

package com.cognite.beam.proto;

option java_package = "com.cognite.client.dto";
option java_multiple_files = true;

message LoginStatus {
    string user = 1;
    bool logged_in = 2;
    string project = 3;
    int64 project_id = 4;
    optional int64 api_key_id = 5;
}
